# python-project-52

./: .codeclimate.yml  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: task_manager.yml
common/: base_view_classes.py  mixins.py  test.py  test_utils.py
core/: base_view_classes.py  forms.py  mixins.py  tests.py  urls.py  views.py
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0002_alter_statuses_name.py
task_manager/: forms.py  settings.py  test.py  tests.py  urls.py  view.py
task_manager/core/: base_view_classes.py  mixins.py  urls.py  views.py
task_manager/labels/: forms.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  login.html
task_manager/users/: forms.py  urls.py  views.py
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0004_remove_tasks_description_tasks_discription.py  0005_remove_tasks_discription_tasks_description.py  0006_tasks_labels.py  0008_alter_tasks_options_alter_tasks_labels.py  (+2 more)
templates/: 404.html  base.html  index.html  login.html
tests/: test_auth_views.py  test_crud.py  test_filter_form.py  test_registration_user.py  test_utils.py
users/: decorators.py  forms.py  mixsins.py  test.py  tests.py  urls.py  views.py
(+33 files in other folders)
