[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Kamran"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^4.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^23.1"
django-widget-tweaks = "^1.4.12"
parameterized = "^0.9.0"
coverage = "^7.2.3"
flake8 = ">=4.0.1,<6.0.1"
psycopg2-binary = "^2.9.6"
rollbar = "^0.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
